[package]
name = "pupik_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.11"}
bevy_kira_audio = {version = "0.16.0", features = ["wav"]}
bevy_mouse_tracking_plugin = "0.6.0"
bevy_rapier2d = "0.22.0"
bevy_pkv = "0.8.0"
winit = "0.28.6"
image = "0.24.6"
rand = "0.8.5"

[build-dependencies]
embed-resource = "1.6.3"